Add basic structure

--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title></title>
+  <title>Academy awards 2017</title>
 </head>
 <body>
-
+  <h1>Academy award nominees</h1>
+  <h2>Best Feature Film</h2>
+  <h2>Best Animated Feature Film</h2>
+  <h2>Best Documentary Feature Film</h2>
 </body>
 </html>
