Add style to images

--- a/index.html
+++ b/index.html
@@ -2,6 +2,30 @@
 <html>
 <head>
   <title>Academy awards 2017</title>
+   <style type="text/css">
+  header{
+    background-color:black;
+    background-image: url("images/oscarsgold.jpg");
+    background-size:contain;
+    background-repeat:no-repeat;
+    background-position:right;
+    height: 200px;
+  }
+  h1{
+    color: white;
+    position: relative;
+    top: 60%;
+    left: 20px;
+    font-size: 50px;
+  }
+  img{
+    width: 200px;
+    height: 300px;
+  }
+  figure{
+    display: inline-block;
+  }
+  </style>
 </head>
 <body>
   <header>
@@ -82,7 +106,7 @@
   </figure>
   <h2>Best Documentary Feature Film</h2>
   <figure>
-    <img src="images/documentary/13th" alt="13th" />
+    <img src="images/documentary/13th.jpg" alt="13th" />
     <br />
     <figcaption>13th</figcaption>
   </figure>
