Add internal and external links

--- a/index.html
+++ b/index.html
@@ -29,106 +29,113 @@
 </head>
 <body>
   <header>
-    <h1>Academy award nominees</h1> 
+    <h1 id="top">Academy award nominees</h1> 
   </header>
+  <nav>
+    <a href="#animated">Animated Feature</a>
+    <a href="#documentary">Documentary Feature</a>
+    <a href="vote.html">VOTE HERE</a>
+  </nav>
   <h2>Best Feature Film</h2>
-  <figure>
-    <img src="images/feature/arrival.jpg" alt="Arrival" />
-    <br />
-    <figcaption>Arrival</figcaption>
-  </figure>
-  <figure>
-    <img src="images/feature/fences.jpg" alt="Fences" />
-    <br />
-    <figcaption>Fences</figcaption>
-  </figure>
-  <figure>
-    <img src="images/feature/hacksaw.jpg" alt="Hacksaw Ridge" />
-    <br />
-    <figcaption>Hacksaw Ridge</figcaption>
-  </figure>
-  <figure>
-    <img src="images/feature/hellorhigh.jpg" alt="Hell or Highwater" />
-    <br />
-    <figcaption>Hell or Highwater</figcaption>
-  </figure>
-  <figure>
-    <img src="images/feature/hidden_figures.jpg" alt="Hidden Figures" />
-    <br />
-    <figcaption>Hidden Figures</figcaption>
-  </figure>
-  <figure>
-    <img src="images/feature/lalaland.jpg" alt="Lala Land" />
-    <br />
-    <figcaption>La la Land</figcaption>
-  </figure>
-  <figure>
-    <img src="images/feature/lion.png" alt="Lion" />
-    <br />
-    <figcaption>Lion</figcaption>
-  </figure>
-  <figure>
-    <img src="images/feature/manchester.jpg" alt="Manchester by the sea" />
-    <br />
-    <figcaption>Manchester by the sea</figcaption>
-  </figure>
-  <figure>
-    <img src="images/feature/moonlight.jpg" alt="Moonlight" />
-    <br />
-    <figcaption>Moonlight</figcaption>
-  </figure>
-  <h2>Best Animated Feature Film</h2>
-  </figure>
-  <figure>
-    <img src="images/animated/kubo.jpg" alt="Kubo and the two strings" />
-    <br />
-    <figcaption>Kubo and the two strings</figcaption>
-  </figure>
-  <figure>
-    <img src="images/animated/moana.jpg" alt="Moana" />
-    <br />
-    <figcaption>Moana</figcaption>
-  </figure>
-  <figure>
-    <img src="images/animated/redturtle.jpg" alt="The red turtle" />
-    <br />
-    <figcaption>The red turtle</figcaption>
-  </figure>
-  <figure>
-    <img src="images/animated/zootopia.jpg" alt="Zootopia" />
-    <br />
-    <figcaption>Zootopia</figcaption>
-  </figure>
-  <figure>
-    <img src="images/animated/zucchini.jpg" alt="My life as a succhini" />
-    <br />
-    <figcaption>My life as a succhini</figcaption>
-  </figure>
-  <h2>Best Documentary Feature Film</h2>
-  <figure>
-    <img src="images/documentary/13th.jpg" alt="13th" />
-    <br />
-    <figcaption>13th</figcaption>
-  </figure>
-  <figure>
-    <img src="images/documentary/fireatsea.jpg" alt="Fire at the sea" />
-    <br />
-    <figcaption>Fire at the sea</figcaption>
-  </figure>
-  <figure>
-    <img src="images/documentary/iamnot.jpg" alt="I am not your negro" />
-    <br />
-    <figcaption>I am not your negro</figcaption>
-  </figure>
-  <figure>
-    <img src="images/documentary/lifeanimated.jpg" alt="Life animated" />
-    <br />
-    <figcaption>Life animated</figcaption>
-  </figure>
-  <figure>
-    <img src="images/documentary/oj.jpg" alt="O.J: Made in America" />
-    <br />
-    <figcaption>O.J. Made in america</figcaption>
-  </figure>
+    <figure>
+      <img src="images/feature/arrival.jpg" alt="Arrival" />
+      <br />
+      <figcaption>Arrival</figcaption>
+    </figure>
+    <figure>
+      <img src="images/feature/fences.jpg" alt="Fences" />
+      <br />
+      <figcaption>Fences</figcaption>
+    </figure>
+    <figure>
+      <img src="images/feature/hacksaw.jpg" alt="Hacksaw Ridge" />
+      <br />
+      <figcaption>Hacksaw Ridge</figcaption>
+    </figure>
+    <figure>
+      <img src="images/feature/hellorhigh.jpg" alt="Hell or Highwater" />
+      <br />
+      <figcaption>Hell or Highwater</figcaption>
+    </figure>
+    <figure>
+      <img src="images/feature/hidden_figures.jpg" alt="Hidden Figures" />
+      <br />
+      <figcaption>Hidden Figures</figcaption>
+    </figure>
+    <figure>
+      <img src="images/feature/lalaland.jpg" alt="Lala Land" />
+      <br />
+      <figcaption>La la Land</figcaption>
+    </figure>
+    <figure>
+      <img src="images/feature/lion.png" alt="Lion" />
+      <br />
+      <figcaption>Lion</figcaption>
+    </figure>
+    <figure>
+      <img src="images/feature/manchester.jpg" alt="Manchester by the sea" />
+      <br />
+      <figcaption>Manchester by the sea</figcaption>
+    </figure>
+    <figure>
+      <img src="images/feature/moonlight.jpg" alt="Moonlight" />
+      <br />
+      <figcaption>Moonlight</figcaption>
+    </figure>
+  <h2 id="animated">Best Animated Feature Film</h2>
+    <figure>
+      <img src="images/animated/kubo.jpg" alt="Kubo and the two strings" />
+      <br />
+      <figcaption>Kubo and the two strings</figcaption>
+    </figure>
+    <figure>
+      <img src="images/animated/moana.jpg" alt="Moana" />
+      <br />
+      <figcaption>Moana</figcaption>
+    </figure>
+    <figure>
+      <img src="images/animated/redturtle.jpg" alt="The red turtle" />
+      <br />
+      <figcaption>The red turtle</figcaption>
+    </figure>
+    <figure>
+      <img src="images/animated/zootopia.jpg" alt="Zootopia" />
+      <br />
+      <figcaption>Zootopia</figcaption>
+    </figure>
+    <figure>
+      <img src="images/animated/zucchini.jpg" alt="My life as a succhini" />
+      <br />
+      <figcaption>My life as a succhini</figcaption>
+    </figure>
+    <p><a href="#top">Back to top</a></p>
+  <h2 id="documentary">Best Documentary Feature Film</h2>
+    <figure>
+      <img src="images/documentary/13th.jpg" alt="13th" />
+      <br />
+      <figcaption>13th</figcaption>
+    </figure>
+    <figure>
+      <img src="images/documentary/fireatsea.jpg" alt="Fire at the sea" />
+      <br />
+      <figcaption>Fire at the sea</figcaption>
+    </figure>
+    <figure>
+      <img src="images/documentary/iamnot.jpg" alt="I am not your negro" />
+      <br />
+      <figcaption>I am not your negro</figcaption>
+    </figure>
+    <figure>
+      <img src="images/documentary/lifeanimated.jpg" alt="Life animated" />
+      <br />
+      <figcaption>Life animated</figcaption>
+    </figure>
+    <figure>
+      <img src="images/documentary/oj.jpg" alt="O.J: Made in America" />
+      <br />
+      <figcaption>O.J. Made in america</figcaption>
+    </figure>
+    <p><a href="#top">Back to top</a></p>
+    <footer> Watch the Academy Awards on February 26th on ABC</footer>
 </body>
 </html>
