--- a/index.html
+++ b/index.html
@@ -38,104 +38,104 @@
   </nav>
   <h2>Best Feature Film</h2>
     <figure>
-      <img src="images/feature/arrival.jpg" alt="Arrival" />
+      <a href="http://www.imdb.com/title/tt2543164/" target="_blank"><img src="images/feature/arrival.jpg" alt="Arrival" /></a>
       <br />
       <figcaption>Arrival</figcaption>
     </figure>
     <figure>
-      <img src="images/feature/fences.jpg" alt="Fences" />
+      <a href="http://www.imdb.com/title/tt2671706/" target="_blank"><img src="images/feature/fences.jpg" alt="Fences" /></a>
       <br />
       <figcaption>Fences</figcaption>
     </figure>
     <figure>
-      <img src="images/feature/hacksaw.jpg" alt="Hacksaw Ridge" />
+      <a href="http://www.imdb.com/title/tt2119532/" target="_blank"><img src="images/feature/hacksaw.jpg" alt="Hacksaw Ridge" /></a>
       <br />
       <figcaption>Hacksaw Ridge</figcaption>
     </figure>
     <figure>
-      <img src="images/feature/hellorhigh.jpg" alt="Hell or Highwater" />
+      <a href="http://www.imdb.com/title/tt2582782/" target="_blank"><img src="images/feature/hellorhigh.jpg" alt="Hell or Highwater" /></a>
       <br />
       <figcaption>Hell or Highwater</figcaption>
     </figure>
     <figure>
-      <img src="images/feature/hidden_figures.jpg" alt="Hidden Figures" />
+      <a href="http://www.imdb.com/title/tt4846340/" target="_blank"><img src="images/feature/hidden_figures.jpg" alt="Hidden Figures" /></a>
       <br />
       <figcaption>Hidden Figures</figcaption>
     </figure>
     <figure>
-      <img src="images/feature/lalaland.jpg" alt="Lala Land" />
+      <a href="http://www.imdb.com/title/tt3783958/" target="_blank"><img src="images/feature/lalaland.jpg" alt="Lala Land"/></a>
       <br />
       <figcaption>La la Land</figcaption>
     </figure>
     <figure>
-      <img src="images/feature/lion.png" alt="Lion" />
+      <a href="http://www.imdb.com/title/tt3741834/" target="_blank"><img src="images/feature/lion.png" alt="Lion" /></a> 
       <br />
       <figcaption>Lion</figcaption>
     </figure>
     <figure>
-      <img src="images/feature/manchester.jpg" alt="Manchester by the sea" />
+      <a href="http://www.imdb.com/title/tt4034228/" target="_blank"><img src="images/feature/manchester.jpg" alt="Manchester by the sea" /></a>
       <br />
       <figcaption>Manchester by the sea</figcaption>
     </figure>
     <figure>
-      <img src="images/feature/moonlight.jpg" alt="Moonlight" />
+      <a href="http://www.imdb.com/title/tt4975722/" target="_blank"><img src="images/feature/moonlight.jpg" alt="Moonlight" /></a>
       <br />
       <figcaption>Moonlight</figcaption>
     </figure>
   <h2 id="animated">Best Animated Feature Film</h2>
     <figure>
-      <img src="images/animated/kubo.jpg" alt="Kubo and the two strings" />
+      <a href="http://www.imdb.com/title/tt4302938/" target="_blank"><img src="images/animated/kubo.jpg" alt="Kubo and the two strings" /></a>
       <br />
       <figcaption>Kubo and the two strings</figcaption>
     </figure>
     <figure>
-      <img src="images/animated/moana.jpg" alt="Moana" />
+      <a href="http://www.imdb.com/title/tt3521164//" target="_blank"><img src="images/animated/moana.jpg" alt="Moana" /></a>
       <br />
       <figcaption>Moana</figcaption>
     </figure>
     <figure>
-      <img src="images/animated/redturtle.jpg" alt="The red turtle" />
+      <a href="http://www.imdb.com/title/tt3666024/" target="_blank"><img src="images/animated/redturtle.jpg" alt="The red turtle" /></a>
       <br />
       <figcaption>The red turtle</figcaption>
     </figure>
     <figure>
-      <img src="images/animated/zootopia.jpg" alt="Zootopia" />
+      <a href="http://www.imdb.com/title/tt2948356/" target="_blank"><img src="images/animated/zootopia.jpg" alt="Zootopia" /></a>
       <br />
       <figcaption>Zootopia</figcaption>
     </figure>
     <figure>
-      <img src="images/animated/zucchini.jpg" alt="My life as a succhini" />
+      <a href="http://www.imdb.com/title/tt2321405/" target="_blank"><img src="images/animated/zucchini.jpg" alt="My life as a succhini" /></a>
       <br />
       <figcaption>My life as a succhini</figcaption>
     </figure>
     <p><a href="#top">Back to top</a></p>
   <h2 id="documentary">Best Documentary Feature Film</h2>
     <figure>
-      <img src="images/documentary/13th.jpg" alt="13th" />
+      <a href="http://www.imdb.com/title/tt5895028/" target="_blank"><img src="images/documentary/13th.jpg" alt="13th" /></a>
       <br />
       <figcaption>13th</figcaption>
     </figure>
     <figure>
-      <img src="images/documentary/fireatsea.jpg" alt="Fire at the sea" />
+      <a href="http://www.imdb.com/title/tt3652526/" target="_blank"><img src="images/documentary/fireatsea.jpg" alt="Fire at sea" /></a>
       <br />
-      <figcaption>Fire at the sea</figcaption>
+      <figcaption>Fire at sea</figcaption>
     </figure>
     <figure>
-      <img src="images/documentary/iamnot.jpg" alt="I am not your negro" />
+      <a href="http://www.imdb.com/title/tt5804038/" target="_blank"><img src="images/documentary/iamnot.jpg" alt="I am not your negro" /></a>
       <br />
       <figcaption>I am not your negro</figcaption>
     </figure>
     <figure>
-      <img src="images/documentary/lifeanimated.jpg" alt="Life animated" />
+      <a href="http://www.imdb.com/title/tt3917210/" target="_blank"><img src="images/documentary/lifeanimated.jpg" alt="Life animated" /></a>
       <br />
-      <figcaption>Life animated</figcaption>
+      <figcaption>Life, animated</figcaption>
     </figure>
     <figure>
-      <img src="images/documentary/oj.jpg" alt="O.J: Made in America" />
+      <a href="http://www.imdb.com/title/tt5275892/" target="_blank"><img src="images/documentary/oj.jpg" alt="O.J: Made in America" /></a>
       <br />
       <figcaption>O.J. Made in america</figcaption>
     </figure>
     <p><a href="#top">Back to top</a></p>
-    <footer> Watch the Academy Awards on February 26th on ABC</footer>
+    <footer> Watch the <a href="http://www.oscars.org/" target="_blank">Academy Awards </a>on February 26th on ABC.</footer>
 </body>
 </html>
