--- a/vote.html
+++ b/vote.html
@@ -5,7 +5,97 @@
 </head>
 <body>
   <h1>Vote for your favourite movies</h1>
-  <h2> How does it work?</h2>
-  <p> Form goes here</p>
+  <form action="success.html">
+    <fieldset>
+      <legend>Vote here</legend>
+      <p> Best Feature Film</p>
+      <label>
+        <input type="radio" name="feature" value="arrival"/>Arrival
+      </label>
+      <br />
+      <label>
+        <input type="radio" name="feature" value="hacksaw"/>Hacksaw Ridge
+      </label>
+      <br />
+      <label>
+        <input type="radio" name="feature" value="hellor"/>Hell or Highwater
+      </label>
+      <br />
+      <label>
+        <input type="radio" name="feature" value="figures"/>Hidden Figures
+      </label>
+      <br />
+      <label>
+        <input type="radio" name="feature" value="lalaland"/>La la land
+      </label>
+      <br />
+      <label>
+        <input type="radio" name="feature" value="Lion"/>Lion
+      </label>
+      <br />
+      <label>
+        <input type="radio" name="feature" value="manchester"/>Manchester by the Sea
+      </label>
+      <br />
+      <label>
+        <input type="radio" name="feature" value="moonlight"/>Moonlight
+      </label>
+      <br />
+      <p> Best Animated Feature</p>
+      <label>
+        <input type="radio" name="feature" value="kubo"/>Kubo and the two strings
+      </label>
+      <br />
+      <label>
+        <input type="radio" name="feature" value="moana"/>Moana
+      </label>  
+      <br />
+      <label>
+        <input type="radio" name="feature" value="redturtle"/>The red turtle
+      </label>  
+      <br />
+      <label>
+        <input type="radio" name="feature" value="zootopia"/>Zootopia
+      </label>  
+      <br />
+      <label>
+        <input type="radio" name="feature" value="succhini"/>My life as a succhini
+      </label>
+      <br />
+      <p> Best Documentary Feature</p>
+      <label>
+        <input type="radio" name="feature" value="13th"/>13th
+      </label>
+      <br />
+      <label>
+        <input type="radio" name="feature" value="fireatsea"/>Fire at sea
+      </label>
+      <br />
+      <label>
+        <input type="radio" name="feature" value="iamnot"/>I am not your negro
+      </label>
+      <br />
+      <label>
+        <input type="radio" name="feature" value="animated"/>Life, Animated
+      </label>
+      <br />
+      <label>
+        <input type="radio" name="feature" value="madein"/>O.J. Made in America
+      </label>
+      <br />
+      <br />
+    </fieldset>
+    <fieldset>
+      <legend>Personal information</legend>
+      <p> Name: 
+      <input type="text" name="username" size="15">
+      </p>
+      <p> Email:
+      <input type="email" name="email" size="15">
+      </p>
+
+    </fieldset>
+      <input type="submit" name="submit" value="Send now" />
+  </form>
 </body>
 </html>
