--- a/success.html
+++ b/success.html
@@ -11,5 +11,38 @@
     <li><a href="http://www.oscars.org/"><strong>Oscars.org </strong></a> will let you check out other categories.</li>
     <li>Or simply <a href="index.html">go back to our home page</a></li>
   </ul>
+
+  <h3> Most popular bets for a feature winning best picture</h3>
+  <table border="1">
+    <tr>
+      <th>Movie</th>
+      <th> Odds <a href="http://www.oddschecker.com/awards/oscars/best-picture">(oddchecker)</a></th>
+    </tr>
+    <tr>
+      <td>La La Land</td>
+      <td>47.82%</td>
+    <tr>
+    <tr>
+      <td>Moonlight</td>
+      <td>25.64%</td>
+    <tr>
+    <tr>
+      <td>Manchester by the sea</td>
+      <td>10.26%</td>
+    <tr>
+    <tr>
+      <td>Fences</td>
+      <td>3.85%</td>
+    <tr>
+    <tr>
+      <td>Hacksaw Ridge</td>
+      <td>3.53%</td>
+    <tr>
+    <tr>
+      <td>Others</td>
+      <td>8.91%</td>
+    <tr>
+  </table>
+
 </body>
 </html>
