Add similar page and comment on it

--- a/index.html
+++ b/index.html
@@ -136,6 +136,9 @@
       <figcaption>O.J. Made in america</figcaption>
     </figure>
     <p><a href="#top">Back to top</a></p>
-    <footer> Watch the <a href="http://www.oscars.org/" target="_blank">Academy Awards </a>on February 26th on ABC.</footer>
+    <footer> Watch the <a href="http://www.oscars.org/" target="_blank">Academy Awards </a>on February 26th on ABC.
+    <p><a href="http://oscar.go.com/nominees/best-picture">The actual best picture page</a> is mostly pictures just like mine but theirs look better arranged, and you can put your mouse on top and you can see the name or go to the trailer. They use so many divs and ids. They use a script of some kind to do the clics and they have code specifically for mobile devices. The navigation bar moves smoothly. 
+    </p>
+    </footer>
 </body>
 </html>
