--- a/index.html
+++ b/index.html
@@ -2,143 +2,127 @@
 <html>
 <head>
   <title>Academy awards 2017</title>
-   <style type="text/css">
-  header{
-    background-color:black;
-    background-image: url("images/oscarsgold.jpg");
-    background-size:contain;
-    background-repeat:no-repeat;
-    background-position:right;
-    height: 200px;
-  }
-  h1{
-    color: white;
-    position: relative;
-    top: 60%;
-    left: 20px;
-    font-size: 50px;
-  }
-  img{
-    width: 200px;
-    height: 300px;
-  }
-  figure{
-    display: inline-block;
-  }
-  </style>
+  <link href="style.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
   <header>
     <h1 id="top">Academy award nominees</h1> 
   </header>
   <nav>
-    <a href="#animated">Animated Feature</a>
-    <a href="#documentary">Documentary Feature</a>
-    <a href="vote.html">VOTE HERE</a>
+    <ul id="navigation">
+      <li><a href="#animated">Animated Feature</a></li>
+      <li><a href="#documentary">Documentary Feature</a></li>
+      <li><a href="vote.html">VOTE HERE</a></li>
+    </ul>
   </nav>
-  <h2>Best Feature Film</h2>
-    <figure>
-      <a href="http://www.imdb.com/title/tt2543164/" target="_blank"><img src="images/feature/arrival.jpg" alt="Arrival" /></a>
-      <br />
-      <figcaption>Arrival</figcaption>
-    </figure>
-    <figure>
-      <a href="http://www.imdb.com/title/tt2671706/" target="_blank"><img src="images/feature/fences.jpg" alt="Fences" /></a>
-      <br />
-      <figcaption>Fences</figcaption>
-    </figure>
-    <figure>
-      <a href="http://www.imdb.com/title/tt2119532/" target="_blank"><img src="images/feature/hacksaw.jpg" alt="Hacksaw Ridge" /></a>
-      <br />
-      <figcaption>Hacksaw Ridge</figcaption>
-    </figure>
-    <figure>
-      <a href="http://www.imdb.com/title/tt2582782/" target="_blank"><img src="images/feature/hellorhigh.jpg" alt="Hell or Highwater" /></a>
-      <br />
-      <figcaption>Hell or Highwater</figcaption>
-    </figure>
-    <figure>
-      <a href="http://www.imdb.com/title/tt4846340/" target="_blank"><img src="images/feature/hidden_figures.jpg" alt="Hidden Figures" /></a>
-      <br />
-      <figcaption>Hidden Figures</figcaption>
-    </figure>
-    <figure>
-      <a href="http://www.imdb.com/title/tt3783958/" target="_blank"><img src="images/feature/lalaland.jpg" alt="Lala Land"/></a>
-      <br />
-      <figcaption>La la Land</figcaption>
-    </figure>
-    <figure>
-      <a href="http://www.imdb.com/title/tt3741834/" target="_blank"><img src="images/feature/lion.png" alt="Lion" /></a> 
-      <br />
-      <figcaption>Lion</figcaption>
-    </figure>
-    <figure>
-      <a href="http://www.imdb.com/title/tt4034228/" target="_blank"><img src="images/feature/manchester.jpg" alt="Manchester by the sea" /></a>
-      <br />
-      <figcaption>Manchester by the sea</figcaption>
-    </figure>
-    <figure>
-      <a href="http://www.imdb.com/title/tt4975722/" target="_blank"><img src="images/feature/moonlight.jpg" alt="Moonlight" /></a>
-      <br />
-      <figcaption>Moonlight</figcaption>
-    </figure>
-  <h2 id="animated">Best Animated Feature Film</h2>
-    <figure>
-      <a href="http://www.imdb.com/title/tt4302938/" target="_blank"><img src="images/animated/kubo.jpg" alt="Kubo and the two strings" /></a>
-      <br />
-      <figcaption>Kubo and the two strings</figcaption>
-    </figure>
-    <figure>
-      <a href="http://www.imdb.com/title/tt3521164//" target="_blank"><img src="images/animated/moana.jpg" alt="Moana" /></a>
-      <br />
-      <figcaption>Moana</figcaption>
-    </figure>
-    <figure>
-      <a href="http://www.imdb.com/title/tt3666024/" target="_blank"><img src="images/animated/redturtle.jpg" alt="The red turtle" /></a>
-      <br />
-      <figcaption>The red turtle</figcaption>
-    </figure>
-    <figure>
-      <a href="http://www.imdb.com/title/tt2948356/" target="_blank"><img src="images/animated/zootopia.jpg" alt="Zootopia" /></a>
-      <br />
-      <figcaption>Zootopia</figcaption>
-    </figure>
-    <figure>
-      <a href="http://www.imdb.com/title/tt2321405/" target="_blank"><img src="images/animated/zucchini.jpg" alt="My life as a succhini" /></a>
-      <br />
-      <figcaption>My life as a succhini</figcaption>
-    </figure>
-    <p><a href="#top">Back to top</a></p>
-  <h2 id="documentary">Best Documentary Feature Film</h2>
-    <figure>
-      <a href="http://www.imdb.com/title/tt5895028/" target="_blank"><img src="images/documentary/13th.jpg" alt="13th" /></a>
-      <br />
-      <figcaption>13th</figcaption>
-    </figure>
-    <figure>
-      <a href="http://www.imdb.com/title/tt3652526/" target="_blank"><img src="images/documentary/fireatsea.jpg" alt="Fire at sea" /></a>
-      <br />
-      <figcaption>Fire at sea</figcaption>
-    </figure>
-    <figure>
-      <a href="http://www.imdb.com/title/tt5804038/" target="_blank"><img src="images/documentary/iamnot.jpg" alt="I am not your negro" /></a>
-      <br />
-      <figcaption>I am not your negro</figcaption>
-    </figure>
-    <figure>
-      <a href="http://www.imdb.com/title/tt3917210/" target="_blank"><img src="images/documentary/lifeanimated.jpg" alt="Life animated" /></a>
-      <br />
-      <figcaption>Life, animated</figcaption>
-    </figure>
-    <figure>
-      <a href="http://www.imdb.com/title/tt5275892/" target="_blank"><img src="images/documentary/oj.jpg" alt="O.J: Made in America" /></a>
-      <br />
-      <figcaption>O.J. Made in america</figcaption>
-    </figure>
-    <p><a href="#top">Back to top</a></p>
-    <footer> Watch the <a href="http://www.oscars.org/" target="_blank">Academy Awards </a>on February 26th on ABC.
+  <div class="main">
+    <h2>Best Feature Film</h2>
+      <figure>
+        <a href="http://www.imdb.com/title/tt2543164/" target="_blank"><img src="images/feature/arrival.jpg" alt="Arrival" /></a>
+        <br />
+        <figcaption>Arrival</figcaption>
+      </figure>
+      <figure>
+        <a href="http://www.imdb.com/title/tt2671706/" target="_blank"><img src="images/feature/fences.jpg" alt="Fences" /></a>
+        <br />
+        <figcaption>Fences</figcaption>
+      </figure>
+      <figure>
+        <a href="http://www.imdb.com/title/tt2119532/" target="_blank"><img src="images/feature/hacksaw.jpg" alt="Hacksaw Ridge" /></a>
+        <br />
+        <figcaption>Hacksaw Ridge</figcaption>
+      </figure>
+      <figure>
+        <a href="http://www.imdb.com/title/tt2582782/" target="_blank"><img src="images/feature/hellorhigh.jpg" alt="Hell or Highwater" /></a>
+        <br />
+        <figcaption>Hell or Highwater</figcaption>
+      </figure>
+      <figure>
+        <a href="http://www.imdb.com/title/tt4846340/" target="_blank"><img src="images/feature/hidden_figures.jpg" alt="Hidden Figures" /></a>
+        <br />
+        <figcaption>Hidden Figures</figcaption>
+      </figure>
+      <figure>
+        <a href="http://www.imdb.com/title/tt3783958/" target="_blank"><img src="images/feature/lalaland.jpg" alt="Lala Land"/></a>
+        <br />
+        <figcaption>La la Land</figcaption>
+      </figure>
+      <figure>
+        <a href="http://www.imdb.com/title/tt3741834/" target="_blank"><img src="images/feature/lion.png" alt="Lion" /></a> 
+        <br />
+        <figcaption>Lion</figcaption>
+      </figure>
+      <figure>
+        <a href="http://www.imdb.com/title/tt4034228/" target="_blank"><img src="images/feature/manchester.jpg" alt="Manchester by the sea" /></a>
+        <br />
+        <figcaption>Manchester by the sea</figcaption>
+      </figure>
+      <figure>
+        <a href="http://www.imdb.com/title/tt4975722/" target="_blank"><img src="images/feature/moonlight.jpg" alt="Moonlight" /></a>
+        <br />
+        <figcaption>Moonlight</figcaption>
+      </figure>
+    <div id="animated"> 
+      <h2>Best Animated Feature Film</h2>
+        <figure>
+          <a href="http://www.imdb.com/title/tt4302938/" target="_blank"><img src="images/animated/kubo.jpg" alt="Kubo and the two strings" /></a>
+          <br />
+          <figcaption>Kubo and the two strings</figcaption>
+        </figure>
+        <figure>
+          <a href="http://www.imdb.com/title/tt3521164//" target="_blank"><img src="images/animated/moana.jpg" alt="Moana" /></a>
+          <br />
+          <figcaption>Moana</figcaption>
+        </figure>
+        <figure>
+          <a href="http://www.imdb.com/title/tt3666024/" target="_blank"><img src="images/animated/redturtle.jpg" alt="The red turtle" /></a>
+          <br />
+          <figcaption>The red turtle</figcaption>
+        </figure>
+        <figure>
+          <a href="http://www.imdb.com/title/tt2948356/" target="_blank"><img src="images/animated/zootopia.jpg" alt="Zootopia" /></a>
+          <br />
+          <figcaption>Zootopia</figcaption>
+        </figure>
+        <figure>
+          <a href="http://www.imdb.com/title/tt2321405/" target="_blank"><img src="images/animated/zucchini.jpg" alt="My life as a succhini" /></a>
+          <br />
+          <figcaption>My life as a succhini</figcaption>
+        </figure>
+        <p><a href="#top">Back to top</a></p>
+    </div>
+    <h2 id="documentary">Best Documentary Feature Film</h2>
+      <figure>
+        <a href="http://www.imdb.com/title/tt5895028/" target="_blank"><img src="images/documentary/13th.jpg" alt="13th" /></a>
+        <br />
+        <figcaption>13th</figcaption>
+      </figure>
+      <figure>
+        <a href="http://www.imdb.com/title/tt3652526/" target="_blank"><img src="images/documentary/fireatsea.jpg" alt="Fire at sea" /></a>
+        <br />
+        <figcaption>Fire at sea</figcaption>
+      </figure>
+      <figure>
+        <a href="http://www.imdb.com/title/tt5804038/" target="_blank"><img src="images/documentary/iamnot.jpg" alt="I am not your negro" /></a>
+        <br />
+        <figcaption>I am not your negro</figcaption>
+      </figure>
+      <figure>
+        <a href="http://www.imdb.com/title/tt3917210/" target="_blank"><img src="images/documentary/lifeanimated.jpg" alt="Life animated" /></a>
+        <br />
+        <figcaption>Life, animated</figcaption>
+      </figure>
+      <figure>
+        <a href="http://www.imdb.com/title/tt5275892/" target="_blank"><img src="images/documentary/oj.jpg" alt="O.J: Made in America" /></a>
+        <br />
+        <figcaption>O.J. Made in america</figcaption>
+      </figure>
+      <p><a href="#top">Back to top</a></p>
+  </div>
+  <footer> 
+    <p>Watch the <a href="http://www.oscars.org/" target="_blank">Academy Awards </a>on February 26th on ABC.</p>
     <p><a href="http://oscar.go.com/nominees/best-picture">The actual best picture page</a> is mostly pictures just like mine but theirs look better arranged, and you can put your mouse on top and you can see the name or go to the trailer. They use so many divs and ids. They use a script of some kind to do the clics and they have code specifically for mobile devices. The navigation bar moves smoothly. 
     </p>
-    </footer>
+  </footer>
 </body>
 </html>
