MOdify structure for readability, add styles

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <li><a href="vote.html">VOTE HERE</a></li>
     </ul>
   </nav>
-  <div class="main">
+  <section id="feature">
     <h2>Best Feature Film</h2>
       <figure>
         <a href="http://www.imdb.com/title/tt2543164/" target="_blank"><img src="images/feature/arrival.jpg" alt="Arrival" /></a>
@@ -62,7 +62,8 @@
         <br />
         <figcaption>Moonlight</figcaption>
       </figure>
-    <div id="animated"> 
+      </section>
+      <section id="animated"> 
       <h2>Best Animated Feature Film</h2>
         <figure>
           <a href="http://www.imdb.com/title/tt4302938/" target="_blank"><img src="images/animated/kubo.jpg" alt="Kubo and the two strings" /></a>
@@ -90,8 +91,9 @@
           <figcaption>My life as a succhini</figcaption>
         </figure>
         <p><a href="#top">Back to top</a></p>
-    </div>
-    <h2 id="documentary">Best Documentary Feature Film</h2>
+    </section>
+    <section id="documentary">
+    <h2>Best Documentary Feature Film</h2>
       <figure>
         <a href="http://www.imdb.com/title/tt5895028/" target="_blank"><img src="images/documentary/13th.jpg" alt="13th" /></a>
         <br />
@@ -118,11 +120,8 @@
         <figcaption>O.J. Made in america</figcaption>
       </figure>
       <p><a href="#top">Back to top</a></p>
-  </div>
-  <footer> 
-    <p>Watch the <a href="http://www.oscars.org/" target="_blank">Academy Awards </a>on February 26th on ABC.</p>
-    <p><a href="http://oscar.go.com/nominees/best-picture">The actual best picture page</a> is mostly pictures just like mine but theirs look better arranged, and you can put your mouse on top and you can see the name or go to the trailer. They use so many divs and ids. They use a script of some kind to do the clics and they have code specifically for mobile devices. The navigation bar moves smoothly. 
-    </p>
+  </section>
+  <footer>
   </footer>
 </body>
 </html>
