--- a/success.html
+++ b/success.html
@@ -13,8 +13,8 @@
     <h1>Thank you for voting.</h1>
     <p> Now that you have voted we recommend you several things: </p>
     <ul>
-      <li><a href="http://www.imdb.com/"><strong>IMDb</strong></a> will let you find more awesome movies</li>
-      <li><a href="http://www.oscars.org/"><strong>Oscars.org </strong></a> will let you check out other categories.</li>
+      <li><a href="http://www.imdb.com/">IMDb</a> will let you find more awesome movies</li>
+      <li><a href="http://www.oscars.org/">Oscars.org</a> will let you check out other categories.</li>
       <li>Or simply <a href="index.html">go back to our home page</a></li>
     </ul>
 
@@ -24,7 +24,7 @@
         <th>Movie</th>
         <th> Odds <a href="http://www.oddschecker.com/awards/oscars/best-picture">(oddchecker)</a></th>
       </tr>
-      <tr>
+      <tr class="even">
         <td>La La Land</td>
         <td>47.82%</td>
       </tr>
@@ -32,7 +32,7 @@
         <td>Moonlight</td>
         <td>25.64%</td>
       </tr>
-      <tr>
+      <tr class="even">
         <td>Manchester by the sea</td>
         <td>10.26%</td>
       </tr>
@@ -40,7 +40,7 @@
         <td>Fences</td>
         <td>3.85%</td>
       </tr>
-      <tr>
+      <tr class="even">
         <td>Hacksaw Ridge</td>
         <td>3.53%</td>
       </tr>
